fix wrong color params

--- a/test/test.scss
+++ b/test/test.scss
@@ -278,16 +278,16 @@
       @include is-equal($AMBER-500, 245 158 11);
     }
     @include it('600') {
-      @include is-equal($AMBER-600, 234 119 6);
+      @include is-equal($AMBER-600, 217 119 6);
     }
     @include it('700') {
-      @include is-equal($AMBER-700, 194 65 12);
+      @include is-equal($AMBER-700, 180 83 9);
     }
     @include it('800') {
-      @include is-equal($AMBER-800, 154 64 14);
+      @include is-equal($AMBER-800, 146 64 14);
     }
     @include it('900') {
-      @include is-equal($AMBER-900, 124 53 15);
+      @include is-equal($AMBER-900, 120 53 15);
     }
     @include it('950') {
       @include is-equal($AMBER-950, 69 26 3);
@@ -380,7 +380,7 @@
       @include is-equal($GREEN-400, 74 222 128);
     }
     @include it('500') {
-      @include is-equal($GREEN-500, 34 222 94);
+      @include is-equal($GREEN-500, 34 197 94);
     }
     @include it('600') {
       @include is-equal($GREEN-600, 22 163 74);
@@ -421,7 +421,7 @@
       @include is-equal($EMERALD-600, 5 150 105);
     }
     @include it('700') {
-      @include is-equal($EMERALD-700, 4 120 103);
+      @include is-equal($EMERALD-700, 4 120 87);
     }
     @include it('800') {
       @include is-equal($EMERALD-800, 6 95 70);
@@ -701,7 +701,7 @@
       @include is-equal($FUCHSIA-600, 192 38 211);
     }
     @include it('700') {
-      @include is-equal($FUCHSIA-700, 162 26 175);
+      @include is-equal($FUCHSIA-700, 162 28 175);
     }
     @include it('800') {
       @include is-equal($FUCHSIA-800, 134 25 143);
